--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@huggingface/inference": "^4.6.1",
     "@huggingface/transformers": "^3.6.3",
     "@langchain/community": "^0.3.48",
     "@langchain/core": "^0.3.62",
@@ -22,8 +23,10 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "langchain": "^0.3.30",
     "mongodb": "^6.17.0",
     "multer": "^2.0.1",
+    "openai": "^5.11.0",
     "pdf-parse": "^1.1.1",
     "zod": "^4.0.5"
   },
