--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "@langchain/mongodb": "^0.1.0",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "d3-dsv": "^2.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
